// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`license routes GET /license returns a list of licenses 1`] = `
Object {
  "code": "CC BY-SA 3.0",
  "url": "https://creativecommons.org/licenses/by-sa/3.0/legalcode",
}
`;

exports[`license routes GET /licenses returns a list of licenses 1`] = `
Array [
  Object {
    "code": "CC BY-SA 3.0",
    "url": "https://creativecommons.org/licenses/by-sa/3.0/legalcode",
  },
]
`;
